Right click using trackpad crashes Safari https://bugs.webkit.org/show_bug.cgi?id=240030 rdar://91786269

Reviewed by Tim Horton.

Source/WebCore:

Trackpad on iOS should mimic mac selection behavior and block context
menu clicks that are not made on a text node.

* page/EventHandler.cpp:
(WebCore::EventHandler::selectClosestContextualWordOrLinkFromHitTestResult):
(WebCore::EventHandler::sendContextMenuEvent):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit/emptyTable.html: Added.
* TestWebKitAPI/Tests/WebKitCocoa/iOSMouseSupport.mm:
(TEST):

Canonical link: https://commits.webkit.org/250308@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293835 268f45cc-cd09-0410-ab3c-d52691b4dbfc